# furl-ai-exercise

./: .dockerignore  README.md  pyproject.toml  run-submission.sh
docker/: Dockerfile  entrypoint.sh
tests/: conftest.py  scenario_data.py  test_firefox_windows10_pinned.py  test_firefox_windows11.py  test_firefox_windows7_esr.py
